--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,8 +130,18 @@ ul.inline li {
     margin-bottom: 0;
 }
 
+.contact a:first-of-type {
+    margin-top: 20px;
+}
+
+.contact img {
+    border-radius: 3px;
+    max-width: 100%;
+}
+
 /* ABOUT */
 .images img {
+    border-radius: 3px;
     max-width: 100%;
 }
 
@@ -152,9 +162,15 @@ ul.inline li {
     /* max-width: 600px; */
 }
 
+.services img {
+    border-radius: 3px;
+    max-width: 100%;
+}
+
 .services h3 {
     font-weight: 600;
     margin-bottom: 10px;
+    margin-top: 20px;
     padding-bottom: 10px;
     border-bottom: 1px solid black;
 }
