--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,14 +8,9 @@
     src: url(../assets/fonts/OktaNeueBlackItalic/font.woff2);
 }
 
-body {
-    font-size: 20px;
-    /* text-align: center; */
-    padding: 20px 30px;
-    font-family: 'OktaNeue', monospace;
-}
 
-/* GENERIC */
+
+/* UTILITIES */
 .margin-bottom {
     margin-bottom: 10px;
 }
@@ -36,18 +31,26 @@ body {
     float: right;
 }
 
+.dollars:before {
+    content: '$';
+    font-size: 0.7em;
+    vertical-align: top;
+    margin-right: -3px;
+}
+
+
+
+/* GENERIC */
+body {
+    font-size: 20px;
+    padding: 20px 30px;
+    font-family: 'OktaNeue', monospace;
+}
+
 main,
 header {
     max-width: 600px;
     margin: 0 auto;
-}
-
-main {
-    /* text-align: center; */
-    /* margin-top: 20px; */
-    /* margin-bottom: 20px; */
-    /* max-width: 600px; */
-
 }
 
 ul {
@@ -62,7 +65,6 @@ sup {
 
 hr {
     border: solid black 2px;
-    /* margin: 0; */
 }
 
 h1,
@@ -80,8 +82,6 @@ h2 {
     margin-bottom: 0;
 }
 
-
-
 a,
 a:visited {
     color: black;
@@ -92,35 +92,13 @@ a:hover {
     font-weight: 900;
 }
 
-.logo {
-    max-height: 160px;
-}
-
-.header-text {
-    display: inline-block;
-    /* margin-left: 50px; */
-    /* margin-right: 50px; */
-    /* vertical-align: top; */
-}
-
 ul {
     list-style: none;
 }
 
-ul.inline li {
-    display: inline;
-}
 
-.dot-separated li::before {
-    content: "\25C7";
-}
 
-.dot-separated li:first-of-type:before {
-    content: "";
-    margin-right: 0;
-}
-
-/* CONTACt */
+/* CONTACT */
 .contact a {
     display: block;
     margin-bottom: 20px;
@@ -139,11 +117,15 @@ ul.inline li {
     max-width: 100%;
 }
 
+
+
 /* ABOUT */
 .images img {
     border-radius: 3px;
     max-width: 100%;
 }
+
+
 
 /* BRANDS */
 .logos {
@@ -156,12 +138,8 @@ ul.inline li {
 }
 
 
-/* SERVICES */
-.services {
-    /* text-align: left; */
-    /* max-width: 600px; */
-}
 
+/* SERVICES */
 .services img {
     border-radius: 3px;
     max-width: 100%;
@@ -180,18 +158,15 @@ ul.inline li {
 .double-star {
     padding-left: 5px;
     margin-left: -5px;
-    /* max-width: 600px; */
 }
 
 .single-dash {
     list-style-type: "-";
-    /* margin-bottom: 10px; */
 }
 
 .single-star,
 .double-star {
     font-size: 0.8em;
-    /* margin-bottom: 5px; */
 }
 
 .single-star {
@@ -202,31 +177,9 @@ ul.inline li {
     list-style-type: "**";
 }
 
-.horizontal-spacing {
-    margin-left: 10px;
-    margin-right: 10px;
-}
 
-.horizontal-spacing:first-of-type {
-    margin-left: 0;
-}
 
-.horizontal-spacing:last-of-type {
-    margin-right: 0;
-}
-
-@media only screen and (min-width: 831px) {
-    .mobile-only {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 830px) {
-    .desktop-only {
-        display: none;
-    }
-}
-
+/* RAINBOW BACKGROUND */
 /* https://www.gradient-animator.com */
 .bg {
     position: fixed;
@@ -301,62 +254,5 @@ ul.inline li {
 
     100% {
         background-position: 45% 0%
-    }
-}
-
-.marquee {
-    height: 50px;
-    overflow: hidden;
-    position: relative;
-    width: 300px;
-    margin: 0 auto;
-}
-
-.marquee p {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    line-height: 50px;
-    text-align: center;
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    -moz-animation: scroll-left 1s linear infinite;
-    -webkit-animation: scroll-left 1s linear infinite;
-    animation: scroll-left 10s linear infinite;
-}
-
-@-moz-keyframes scroll-left {
-    0% {
-        -moz-transform: translateX(100%);
-    }
-
-    100% {
-        -moz-transform: translateX(-100%);
-    }
-}
-
-@-webkit-keyframes scroll-left {
-    0% {
-        -webkit-transform: translateX(100%);
-    }
-
-    100% {
-        -webkit-transform: translateX(-100%);
-    }
-}
-
-@keyframes scroll-left {
-    0% {
-        -moz-transform: translateX(100%);
-        -webkit-transform: translateX(100%);
-        transform: translateX(100%);
-    }
-
-    100% {
-        -moz-transform: translateX(-100%);
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%);
     }
 }
