--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,7 @@ a,
 a:visited {
     color: black;
     text-decoration: none;
+    font-style: italic;
 }
 
 a:hover {
@@ -109,7 +110,7 @@ ul {
 }
 
 .contact a:first-of-type {
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .contact img {
@@ -127,7 +128,19 @@ ul {
 }
 
 .hours .hour {
-    padding-left: 40px;
+    padding-left: 25px;
+}
+
+.content {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact-info {
+    /* float: right; */
+    margin-bottom: 20px;
 }
 
 
@@ -160,10 +173,15 @@ ul {
 
 .services h3 {
     font-weight: 600;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
     margin-top: 20px;
     padding-bottom: 10px;
     border-bottom: 1px solid black;
+}
+
+.services > ul > li {
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .single-dash,
