--- a/styles/styles.css
+++ b/styles/styles.css
@@ -97,6 +97,19 @@ ul {
     list-style: none;
 }
 
+/* NAV */
+.nav {
+    list-style:none;
+    display:flex;
+    justify-content: space-between;
+
+    margin-bottom: 20px;
+}
+
+.nav label {
+    cursor: pointer;
+    font-size: 1.17em;
+}
 
 
 /* CONTACT */
@@ -149,18 +162,6 @@ ul {
 .images img {
     border-radius: 3px;
     max-width: 100%;
-}
-
-
-
-/* BRANDS */
-.logos {
-    display: flex;
-    margin-top: 15px;
-}
-
-.logos img {
-    max-width: 200px;
 }
 
 
