--- a/styles/tabset.css
+++ b/styles/tabset.css
@@ -1,5 +1,8 @@
 /* https://levelup.gitconnected.com/tabbed-interfaces-without-javascript-661bab1eaec8 */
 
+/* THIS THING IS REALLY TIED TO THE STRUCTURE OF THE HTML... */
+/* BE CAREFUL EDITING IT OR THE HTML IT AFFECTS  */
+
 .tabset > input {
     display: block; /* "enable" hidden elements in IE/edge */
     position: absolute; /* then hide them off-screen */
@@ -9,17 +12,10 @@
   .tabset > ul {
     position:relative;
     z-index:999;
-    list-style:none;
-    display:flex;
-    justify-content: space-between;
-
-    margin-bottom: 20px;
   }
   
   .tabset > ul label {
     display:inline-block;
-    cursor: pointer;
-    font-size: 1.17em;
   }
   
   .tabset > div {
@@ -49,8 +45,6 @@
   .tabset > input:nth-child(7):checked ~ ul li:nth-child(7) label,
   .tabset > input:nth-child(8):checked ~ ul li:nth-child(8) label,
   .tabset > input:nth-child(9):checked ~ ul li:nth-child(9) label {
-    /* background:hsl(220, 100%, 98%); */
-    /* border-bottom-color:hsl(220, 100%, 98%); */
     font-weight: 900;
     font-family: "";
     font-family: 'OktaNeueBold', monospace;
@@ -61,9 +55,6 @@
     position:absolute;
     top:-999em;
     left:-999em;
-  }
-  .tabset > div > section {
-    /* padding:1em 1em 0; */
   }
   
   .tabset > input:nth-child(1):checked ~ div > section:nth-child(1),
