Made mobile better

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,6 +168,8 @@ ul {
 
 
 
+
+
 /* SERVICES */
 .services img {
     border-radius: 3px;
@@ -209,6 +211,18 @@ ul {
 
 .double-star {
     list-style-type: "**";
+}
+
+
+/* MOBILE */
+@media only screen and (max-width: 400px) {
+    body {
+        padding: 10px;
+    }
+
+    .about p {
+        font-size: inherit;
+    }
 }
 
 
